Integrated JDBC Sniffer

--- a/src/main/resources/spring/data-access.properties
+++ b/src/main/resources/spring/data-access.properties
@@ -7,8 +7,8 @@
 #-------------------------------------------------------------------------------
 # HSQL Settings
 
-jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:mem:petclinic
+jdbc.driverClassName=com.github.bedrin.jdbc.sniffer.MockDriver
+jdbc.url=sniffer:jdbc:hsqldb:mem:petclinic
 jdbc.username=sa
 jdbc.password=
 
