--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,20 @@
         <param-value>classpath:spring/business-config.xml, classpath:spring/tools-config.xml</param-value>
     </context-param>
 
+    <!-- JDBC Sniffer -->
+    <filter>
+        <filter-name>sniffer</filter-name>
+        <filter-class>com.github.bedrin.jdbc.sniffer.servlet.SnifferFilter</filter-class>
+        <init-param>
+            <param-name>inject-html</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>sniffer</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
