Use sniffy instead of JDBC sniffer

--- a/src/main/resources/spring/data-access.properties
+++ b/src/main/resources/spring/data-access.properties
@@ -7,7 +7,7 @@
 #-------------------------------------------------------------------------------
 # HSQL Settings
 
-jdbc.driverClassName=com.github.bedrin.jdbc.sniffer.MockDriver
+jdbc.driverClassName=io.sniffy.MockDriver
 jdbc.url=sniffer:jdbc:hsqldb:mem:petclinic
 jdbc.username=sa
 jdbc.password=
