--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,12 @@
 			<artifactId>jquery</artifactId>
 			<version>${webjars-jquery.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery-migrate</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+
 		
 		<!-- Test Artifacts -->
 		<dependency>
@@ -269,9 +275,9 @@
 
 		<!-- JDBC Sniffer -->
 		<dependency>
-		    <groupId>com.github.bedrin</groupId>
-		    <artifactId>jdbc-sniffer</artifactId>
-		    <version>2.3.5</version>
+		    <groupId>io.sniffy</groupId>
+		    <artifactId>sniffy</artifactId>
+		    <version>3.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
