--- a/pom.xml
+++ b/pom.xml
@@ -277,7 +277,7 @@
 		<dependency>
 		    <groupId>io.sniffy</groupId>
 		    <artifactId>sniffy</artifactId>
-		    <version>3.0.5-SNAPSHOT</version>
+		    <version>3.0.5</version>
 		</dependency>
 	</dependencies>
 
