--- a/pom.xml
+++ b/pom.xml
@@ -286,7 +286,7 @@
 		<dependency>
 		    <groupId>io.sniffy</groupId>
 		    <artifactId>sniffy</artifactId>
-			<version>3.1.0-RC9</version>
+			<version>3.1.0-RC10-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
