Sniffy updated to 3.1.0-RC10; added slash to datasource URL

--- a/src/main/resources/spring/data-access.properties
+++ b/src/main/resources/spring/data-access.properties
@@ -8,7 +8,7 @@
 # HSQL Settings
 
 jdbc.driverClassName=io.sniffy.MockDriver
-jdbc.url=sniffer:jdbc:hsqldb:mem:petclinic
+jdbc.url=sniffer:jdbc:hsqldb:mem:pet/clinic
 jdbc.username=sa
 jdbc.password=
 
