--- a/pom.xml
+++ b/pom.xml
@@ -220,4 +220,13 @@
     </plugins>
   </reporting>
 
+    <repositories>
+        <repository>
+            <id>sonatypeOssDistMgmtSnapshotsUrl</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <snapshots><enabled>true</enabled></snapshots>
+            <releases><enabled>false</enabled></releases>
+        </repository>
+    </repositories>
+
 </project>
