--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,7 @@
           </execution>
         </executions>
         <configuration>
+            <failOnNoGitDirectory>false</failOnNoGitDirectory>
           <verbose>true</verbose>
           <dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
           <generateGitPropertiesFile>true</generateGitPropertiesFile>
