--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 # database init, supports mysql too
 database=hsqldb
+spring.datasource.url=jdbc:hsqldb:hsql://127.0.0.1:8967/xdb
+spring.datasource.username=SA
+spring.datasource.password=
 spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
 
