--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
       <dependency>
           <groupId>io.sniffy</groupId>
           <artifactId>sniffy</artifactId>
-          <version>3.1.1-SNAPSHOT</version>
+          <version>3.1.1</version>
       </dependency>
     <!-- Spring and Spring Boot dependencies -->
     <dependency>
