Dockerfile now executes maven build

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 # database init, supports mysql too
+server.address=0.0.0.0
+
 database=hsqldb
 spring.datasource.url=jdbc:hsqldb:hsql://127.0.0.1:8967/xdb
 spring.datasource.username=SA
